tests/expectations/compiler/const_generics/non_const_arg_fail.out
Error [ECMP0376012]: Unable to resolve call to generic function `test.aleo/bar`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:3:22
     |
   3 |         return bar::[x]();
     |                      ^
